[package]
name = "non-zero"
version = "0.2.0"
edition = "2024"

authors = ["SLUCHABLUB"]
description = "A macro for creating constant non-zero integers (with type inference)."
repository = "https://github.com/SLUCHABLUB/non-zero"

license = "MIT OR Apache-2.0"
readme = "README.md"

keywords = ["non-zero", "nonzero"]
categories = ["rust-patterns", "mathematics", "no-std"]

[dev-dependencies]
trybuild = "1.0"
